GNOME Bugzilla – Bug 663846
GPtrArray and GArray are not supported in properties
Last modified: 2015-09-21 19:36:19 UTC
Annotation for properties of type GPtrArray and GArray does not work.
Created attachment 201220 [details] [review] unit test for Array and PtrArray properties
oh and "GLib.PtrArray<TelepathyGLib.CallContent>" makes gtkdoc fail because in the intermediary xml file, <TelepathyGLib.CallContent> is considered an opening tag which is not closed.
Last time this came up we'd discussed adding support for Element-Type: as a toplevel notation. Clearly the <> conflict with the XML syntax so we can't do that.
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]
I see it has been fixed already, regress.c has this now: RegressTestObj:list: (type GLib.List(utf8)) (transfer none) I guess it would work with GLib.PtrArray(utf8) as well.