tp_channel_dispatch_operation_get_channels: annotate return type, don't skip

The justification for (skip)ing it is that it's just a binding for a
property, but the underlying property is not useful from g-i due to
a g-i limitation (GPtrArray properties can't be annotated with their
element types, https://bugzilla.gnome.org/show_bug.cgi?id=663846).

https://bugs.freedesktop.org/show_bug.cgi?id=55102